--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ marshmallow==3.19.0
 marshmallow-enum==1.5.1
 multidict==6.0.4
 mypy-extensions==1.0.0
+mysqlclient==2.2.0
 numexpr==2.8.4
 numpy==1.25.0
 openai==0.27.8
