--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ colorama==0.4.6
 dataclasses-json==0.5.8
 Django==4.2.2
 django-bootstrap4==23.1
+django-cors-headers==4.2.0
 djangorestframework==3.14.0
 frozenlist==1.3.3
 greenlet==2.0.2
