--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,37 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
 asgiref==3.7.2
+astor==0.8.1
+asttokens==2.2.1
 async-timeout==4.0.2
 attrs==23.1.0
+backcall==0.2.0
 beautifulsoup4==4.12.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
 colorama==0.4.6
+contourpy==1.1.0
+cycler==0.11.0
 dataclasses-json==0.5.8
+decorator==5.1.1
 Django==4.2.2
 django-bootstrap4==23.1
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
+executing==1.2.0
+fonttools==4.42.1
 frozenlist==1.3.3
 greenlet==2.0.2
 idna==3.4
+ipython==8.14.0
+jedi==0.19.0
+kiwisolver==1.4.4
 langchain==0.0.218
 langchainplus-sdk==0.0.17
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
 multidict==6.0.4
 mypy-extensions==1.0.0
 mysqlclient==2.2.0
@@ -27,22 +40,36 @@ numpy==1.25.0
 openai==0.27.8
 openapi-schema-pydantic==1.2.4
 packaging==23.1
-pandas==2.0.2
+pandas==1.5.3
+pandasai==1.0.8
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==10.0.0
+prompt-toolkit==3.0.39
+pure-eval==0.2.2
 pydantic==1.10.9
+Pygments==2.16.1
+pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0
 requests==2.31.0
+scipy==1.11.2
+seaborn==0.12.2
 six==1.16.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.17
 sqlparse==0.4.4
+stack-data==0.6.2
 tabulate==0.9.0
+Tcl==0.2
 tenacity==8.2.2
 tqdm==4.65.0
+traitlets==5.9.0
 typing-inspect==0.9.0
 typing_extensions==4.6.3
 tzdata==2023.3
 urllib3==2.0.3
+wcwidth==0.2.6
 yarl==1.9.2
